Chat css max width wwrap fix ok

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -105,8 +105,8 @@ textarea {
 }
 
 .card {
-    max-width: 700px;
-
+    width: 500px;
+    max-width: 600px;
     margin: 0 auto;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -132,6 +132,8 @@ textarea {
 }
 #chatMessages{
     overflow-y: auto;
+    overflow-x: hidden;
+    word-wrap: break-word;
 }
 #username {
     font-size: 14px;
